Add functions to scripts.js to allow input to output different pages.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         </div>
         <div id="qTwo">
           <h3>What is your <em>age</em>?</h3>
-          <input id="age" class="form-control" type="number" required>
+          <select id="age" class="form-control">
+            <option value="1">0-20</option>
+            <option value="10">21-40</option>
+            <option value="20">41-60</option>
+            <option value="40">60-100</option>
         </div>
         <div id="qThree">
           <h3>Which is a <em>better</em>?</h3>
@@ -67,6 +71,7 @@
             <option value="80">Play Video Games</option>
           </select>
         </div>
+        
       </div>
       <button type="submit" class="btn-lg" id="submit">Submit!</button>
     </form>
@@ -90,6 +95,10 @@
       </div>
       <div id="python">
         <h2><span class="yourName"> you should learn Python!</span></h2>
+        <p></p>
+        <ul>
+          <li>Click <a href="https://www.python.org/about/gettingstarted/" target="_blank" alt="Link to python for beginners page.">here </a> to learn more about python.</li>
+        </ul>
       </div>
       <div id="ruby">
         <h2><span class="yourName"> you should learn Ruby!</span></h2>
