Fix yourName span and adjust if else function.

--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@
             <option value="80">Play Video Games</option>
           </select>
         </div>
-        
       </div>
       <button type="submit" class="btn-lg" id="submit">Submit!</button>
     </form>
 
     <div class="quizAnswers">
       <div id="html">
-        <h2><span class="yourName"> you should learn HTML!</span></h2>
+        <h2><span class="yourName"></span> you should learn HTML!</h2>
         <p>You seem interested to get started in programming! A great place to start is with building webpages. If you're feeling like a little more excitement is necessary you can add some CSS to your projects.</p>
         <ul>
           <li>Click <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" alt="Link to MDN page on HTML">here</a> to learn more about HTML.</li>
@@ -86,7 +85,7 @@
         </ul>
       </div>
       <div id="rust">
-        <h2><span class="yourName"> you should learn Rust!</span></h2>
+        <h2><span class="yourName"></span> you should learn Rust!</h2>
         <p>Rust is a great general-purpose language. If you decided to start programming with Rust you would find it similar to C and C++ making those languages easier to understand. It has been voted the most-loved programming language on Stack Overflow since 2016.</p>
         <ul>
           <li>Click <a href="https://www.rust-lang.org/" target="_blank" alt="Link to Rust's main-page for their website">here</a> to learn more about Rust.</li>
@@ -94,14 +93,14 @@
         </ul>
       </div>
       <div id="python">
-        <h2><span class="yourName"> you should learn Python!</span></h2>
+        <h2><span class="yourName"></span> you should learn Python!</h2>
         <p></p>
         <ul>
           <li>Click <a href="https://www.python.org/about/gettingstarted/" target="_blank" alt="Link to python for beginners page.">here </a> to learn more about python.</li>
         </ul>
       </div>
       <div id="ruby">
-        <h2><span class="yourName"> you should learn Ruby!</span></h2>
+        <h2><span class="yourName"></span> you should learn Ruby!</h2>
         <p>You seem most compatible with Ruby. It's great for building applications and automation. With the help of Ruby on Rails you can make complex front-end and back-end web development and data processing. It's a very flexible language that allows developers to alter how the language works.</p>
         <ul>
           <li>Click <a href="https://www.ruby-lang.org/en/about/" target="_blank" alt="Link to Ruby's about page for their website">here</a> to learn more about Ruby.</li>
