Add more styles for #quiz and background.

--- a/index.html
+++ b/index.html
@@ -41,28 +41,16 @@
           <div class="row">
             <div class="col-12">
               <div class="radio">
-                <label>
-                  <input type="radio" name="color" value="1" checked>
-                  Blue
-                </label>
+                <label><input type="radio" name="color" value="1" checked>Blue</label>
               </div>
               <div class="radio">
-                <label>
-                  <input type="radio" name="color" value="25">
-                  Red
-                </label>
+                <label><input type="radio" name="color" value="25">Red</label>
               </div>
               <div class="radio">
-                <label>
-                  <input type="radio" name="color" value="50">
-                  Lime Green
-                </label>
+                <label><input type="radio" name="color" value="50">Lime Green</label>
               </div>
               <div class="radio">
-                <label>
-                  <input type="radio" name="color" value="80">
-                  Kia Soul Yellow
-                </label>
+                <label><input type="radio" name="color" value="80">Kia Soul Yellow</label>
               </div>
             </div>
           </div>
