Adjust column and row to try to fix radio button format.

--- a/index.html
+++ b/index.html
@@ -37,20 +37,32 @@
           </div>
         </div>
         <div id="qThree">
-          <h3>Which is a <em>better</em>?</h3>
           <div class="row">
             <div class="col-12">
+              <h3>Which is a <em>better</em>?</h3>
               <div class="radio">
-                <label><input type="radio" name="color" value="1" checked>Blue</label>
+                <label>
+                  <input type="radio" name="color" value="1" checked>
+                  Blue
+                </label>
               </div>
               <div class="radio">
-                <label><input type="radio" name="color" value="25">Red</label>
+                <label>
+                  <input type="radio" name="color" value="25">
+                  Red
+                </label>
               </div>
               <div class="radio">
-                <label><input type="radio" name="color" value="50">Lime Green</label>
+                <label>
+                  <input type="radio" name="color" value="50">
+                  Lime Green
+                </label>
               </div>
               <div class="radio">
-                <label><input type="radio" name="color" value="80">Kia Soul Yellow</label>
+                <label>
+                  <input type="radio" name="color" value="80">
+                  Kia Soul Yellow
+                </label>
               </div>
             </div>
           </div>
