FIX radio button format and background.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <option value="10">21-40</option>
                 <option value="20">41-60</option>
                 <option value="40">60-100</option>
+              </select>
             </div>
           </div>
         </div>
