Add shooting star background.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <div class="jumbotron">
       <h1>What Programming Language is For You!</h1>
     </div>
+    <div class="night">
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+      <div class="star"></div>
+    </div>
     <form id="quiz">
       <div class="quizQuestions">
         <div id="qOne">
