--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div id="python">
         <h2><span class="yourName"></span> you should learn Python!</h2>
-        <p></p>
+        <p>Python is both a great language for data analysis, data visualization and overall developing software. A great starter language for everyday tasks.</p>
         <ul>
           <li>Click <a href="https://www.python.org/about/gettingstarted/" target="_blank" alt="Link to python for beginners page.">here </a> to learn more about python.</li>
         </ul>
