Adjust styles for questions and background scroll.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <div class="row">
             <div class="col-12">
               <h3>What is your <em>name</em>?</h3>
-              <input id="name" class="form-control" type="text" placeholder="Your name here!" required>
+              <label class="nameInput">
+                <input id="name" class="form-control" type="text" placeholder="Your name here!" required>
+              </label>
             </div>
           </div>
         </div>
