fix spelling and adjust overflow to remove scrollbar.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <h1>What Programming Language is For You!</h1>
     </div>
     <div class="night">
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
-      <div class="star"></div>
+      <div class="star" id="star1"></div>
+      <div class="star" id="star2"></div>
+      <div class="star" id="star3"></div>
+      <div class="star" id="star4"></div>
     </div>
     <form id="quiz">
       <div class="quizQuestions">
@@ -48,7 +48,7 @@
         <div id="qThree">
           <div class="row">
             <div class="col-12">
-              <h3>Which is a <em>better</em>?</h3>
+              <h3>Which is a <em>better</em> color?</h3>
               <div class="radio">
                 <label>
                   <input type="radio" name="color" value="1" checked>
