--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="row">
             <div class="col-12">
               <h3>What is your <em>name</em>?</h3>
-              <label class="nameInput">
+              <label class="name">
                 <input id="name" class="form-control" type="text" placeholder="Your name here!" required>
               </label>
             </div>
@@ -109,9 +109,9 @@
     <div class="quizAnswers container">
       <div id="html">
         <div>
-          <h2><span class="yourName"></span> you should learn HTML!</h2>
-          <p>You seem interested to get started in programming! A great place to start is with building webpages. If you're feeling like a little more excitement is necessary you can add some CSS to your projects.</p>
-          <ul>
+          <h2 id="html1"><span class="yourName"></span> you should learn HTML!</h2>
+          <p class="html2">You seem interested to get started in programming! A great place to start is with building webpages. If you're feeling like a little more excitement is necessary you can add some CSS to your projects.</p>
+          <ul class="html2">
             <li>Click <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" alt="Link to MDN page on HTML">here</a> to learn more about HTML.</li>
             <li>Click <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" alt="Link to MDN page on HTML">here</a> to learn more about CSS</li>
           </ul>
